--- a/front/packages/ui/public/standalone.css
+++ b/front/packages/ui/public/standalone.css
@@ -1,5 +1,5 @@
 body {
-  background: #f9fafb;
+  background: #2C2F36;
   font-family: Helvetica, Arial, sans-serif;
   margin: 0;
   line-height: 1.8;
@@ -46,11 +46,11 @@ body {
   margin: auto;
   color: #2c374b;
   font-family: 'silka', Arial, Helvetica, sans-serif;
-  background: white;
+  background: #362c33;
 }
-.hero img {
+/* .hero img {
   height: 2rem;
-}
+} */
 .hero a {
   color: inherit;
 }
@@ -95,14 +95,18 @@ body {
   padding: 0 1rem 3rem;
   max-width: 100%;
   margin: -12rem auto 0;
+  display:flexbox;
+  
 }
 .wizard {
   background-color: #f9fafb;
-  box-shadow: 0px 10px 40px rgba(43, 168, 64, 0.2);
+  box-shadow: 0px 10px 40px rgba(21, 163, 182, 0.2);
   border-radius: 1rem;
   min-width: 800px;
   max-width: 1100px;
   margin: auto;
+ 
+
 }
 
 /* FAQ */
@@ -134,45 +138,6 @@ body {
   margin-top: 0.5rem;
 }
 
-/* Defender */
-.defender {
-  max-width: 45rem;
-  background-color: #21d4fd;
-  background-image: linear-gradient(19deg, #21d4fd 0%, #4e5de4 100%);
-  box-shadow: 0px 10px 30px rgba(181, 185, 192, 0.3);
-  border-radius: 1rem;
-  padding: 3rem 6rem;
-  margin: 0 auto 4rem;
-  color: white;
-  text-align: center;
-  line-height: 1.5;
-}
-.defender p {
-  margin: 0 auto 2rem;
-  font-size: 1.2rem;
-  max-width: 45rem;
-  color: #f0f6fe;
-}
-.defender a {
-  display: block;
-  background: white;
-  font-size: 1rem;
-  line-height: 1;
-  color: #3586f0;
-  font-weight: bold;
-  text-transform: uppercase;
-  text-decoration: none;
-  border-radius: 0.75rem;
-  padding: 1rem 2rem;
-  width: fit-content;
-  margin: auto;
-}
-.defender a:hover,
-.defender a:focus {
-  box-shadow: 0px 0px 12px rgb(255 255 255 / 80%);
-  outline: none;
-  border: none;
-}
 
 /* Footer */
 .footer-icons {
