--- a/front/packages/ui/public/standalone.css
+++ b/front/packages/ui/public/standalone.css
@@ -44,7 +44,7 @@ body {
   text-align: center;
   padding: 5rem 1rem 16rem;
   margin: auto;
-  color: #2c374b;
+  color: #2C2F36;
   font-family: 'silka', Arial, Helvetica, sans-serif;
  
 }
@@ -61,7 +61,7 @@ body {
   margin: 0;
   font-weight: 500;
   color: transparent;
-  background: linear-gradient(-60deg, #4e5de4, #49a5fa, #51d4ff, #49a5fa, #51d4ff);
+  background: linear-gradient(160deg,#0093E9 0%,#80D0C7 100%, #00d9ef, #153d6f70, #04d3c0, #2d384f, #FFFFFF, #315df6, #25afc4);
   background-size: 200% 200%;
   animation: Gradient 8s ease infinite;
   -moz-animation: Gradient 8s ease infinite;
@@ -83,8 +83,8 @@ body {
 
 .star {
   top:0;
-  position: relative;
-   z-index: -1;
+  position: fixed;
+   z-index: -10;
    width: 100%;
    height: 100%;
 }
@@ -92,7 +92,7 @@ body {
   margin: 0 auto;
   font-size: 1.3em;
   line-height: 1.5;
-  color: #798294;
+  color: #7289b8;
   font-weight: 400;
   max-width: 40rem;
 }
@@ -121,6 +121,7 @@ body {
   max-width: 45rem;
   margin: 0 auto 2rem;
   padding: 0 2rem;
+ 
 }
 .faq ul {
   padding-inline-start: 0;
@@ -134,9 +135,11 @@ body {
   border: none;
 }
 .faq h3 {
-  color: #3d4a5c;
+  background: linear-gradient(160deg,#0093E9 0%,#80D0C7 100%, #00d9ef, #153d6f70, #04d3c0, #2d384f, #FFFFFF, #315df6, #25afc4);
   font-family: 'silka', Arial, Helvetica, sans-serif;
   margin: 0;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
   font-size: 1.3rem;
   font-weight: 500;
 }
