--- a/front/packages/ui/public/standalone.css
+++ b/front/packages/ui/public/standalone.css
@@ -102,7 +102,7 @@ body {
   padding: 0 1rem 3rem;
   max-width: 100%;
   margin: -12rem auto 0;
-  display:flexbox;
+  display:auto;
   
 }
 .wizard {
@@ -112,7 +112,7 @@ body {
   min-width: 800px;
   max-width: 1100px;
   margin: auto;
- 
+ overflow: auto;
 
 }
 
