--- a/front/packages/ui/public/standalone.css
+++ b/front/packages/ui/public/standalone.css
@@ -239,3 +239,54 @@ body .leadinModal.leadinModal-theme-top {
       opacity: 1;
     }
   }
+  body {
+    width: 100%;
+    height: 100%;
+  }
+  
+  .wrapper {
+    position: relative;
+    width: 640px;
+    margin: 50px auto;
+  }
+  
+  nav {
+    width: 100%;
+  }
+  
+  nav ul a {
+    display: inline-block;
+    list-style: none;
+    width: 160px;
+    text-align: center;
+    font-family: Helvetica, sans-serif;
+    border: 1px dashed rgba(255,255,255, 0);
+    color: #fff;
+    padding: 10px 0 10px 0;
+    margin: -1px -5px -1px -1px;
+    cursor: pointer;
+    transition: all .2s;
+  }
+  
+  nav ul a:hover {
+    background: rgba(255,255,255,.1);
+  }
+  
+  nav ul {
+    border: 1px solid #fff;
+    position: absolute;
+    width: 100%;
+    padding: 0;
+    z-index: 100;
+  }
+  
+  nav div {
+    position: absolute;
+    left: 0;
+    top: 16px;
+  
+    width: 162px;
+    height: 40px;
+    z-index:99;
+  }
+  
